--- a/RazorTransform.csproj
+++ b/RazorTransform.csproj
@@ -51,6 +51,10 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>packages\RazorEngine.3.4.0\lib\net45\RazorEngine.dll</HintPath>
     </Reference>
+    <Reference Include="RtPsHost, Version=1.0.4.3, Culture=neutral, PublicKeyToken=535039ec35d9fb50, processorArchitecture=MSIL">
+      <HintPath>packages\RtPsHost.1.0.4.3\lib\net45\RtPsHost.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
     <Reference Include="System.Drawing" />
@@ -349,12 +353,6 @@
   </ItemGroup>
   <ItemGroup>
     <Resource Include="Resources\Clipboard.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\joat-rtpshost\RtPsHost.csproj">
-      <Project>{412dc3ea-c4b8-4010-b9cd-7dbb5650ddb3}</Project>
-      <Name>RtPsHost</Name>
-    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
