--- a/RazorTransform.nuspec
+++ b/RazorTransform.nuspec
@@ -11,7 +11,8 @@
     <!--<iconUrl>http://ICON_URL_HERE_OR_DELETE_THIS_LINE</iconUrl>-->
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
     <description>$description$</description>
-    <releaseNotes>2.1.2 Show Expanded values with @Model strings and numbers, move to GitHub, fix for password, multiline edit support, exportPs option, parallel progress fix
+    <releaseNotes>2.1.3 Add support for controlling ScriptSets when running PowerShell scripts
+2.1.2 Show Expanded values with @Model strings and numbers, move to GitHub, fix for password, multiline edit support, exportPs option, parallel progress fix
 2.1.1.0 Add enum
 2.1.0.8 Add @Model breadcrumb and units and margin fix and other fixes
 2.1.0.0 Rewrite of internal model.  Label type added.  Settings fixes.  @Model.array indexing by number, name support
