--- a/RazorTransform.csproj
+++ b/RazorTransform.csproj
@@ -354,6 +354,11 @@
   <ItemGroup>
     <Resource Include="Resources\Clipboard.png" />
   </ItemGroup>
+  <ItemGroup>
+    <Resource Include="license.txt">
+      <SubType>Form</SubType>
+    </Resource>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
