--- a/RazorTransform.nuspec
+++ b/RazorTransform.nuspec
@@ -6,12 +6,13 @@
     <title>$title$</title>
     <authors>$author$</authors>
     <owners>$author$</owners>
-        <licenseUrl>https://code.google.com/p/joat-razortransform/wiki/License</licenseUrl>
-        <projectUrl>https://code.google.com/p/joat-razortransform/</projectUrl>
+        <licenseUrl>https://github.com/Seekatar/joat-razortransform/blob/master/license.txt</licenseUrl>
+        <projectUrl>https://github.com/Seekatar/joat-razortransform</projectUrl>
     <!--<iconUrl>http://ICON_URL_HERE_OR_DELETE_THIS_LINE</iconUrl>-->
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
     <description>$description$</description>
-    <releaseNotes>2.1.3 Add support for controlling ScriptSets when running PowerShell scripts
+    <releaseNotes>2.1.4 tolerate scripts for enums missing, remove ADM-specific code for powershell.
+2.1.3 Add support for controlling ScriptSets when running PowerShell scripts
 2.1.2 Show Expanded values with @Model strings and numbers, move to GitHub, fix for password, multiline edit support, exportPs option, parallel progress fix
 2.1.1.0 Add enum
 2.1.0.8 Add @Model breadcrumb and units and margin fix and other fixes
