update razorengine version, may break

--- a/RazorTransform.csproj
+++ b/RazorTransform.csproj
@@ -48,8 +48,8 @@
     <StartupObject>RazorTransform.App</StartupObject>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="RazorEngine, Version=3.4.0.0, Culture=neutral, PublicKeyToken=9ee697374c7e744a, processorArchitecture=MSIL">
-      <HintPath>packages\RazorEngine.3.4.0\lib\net45\RazorEngine.dll</HintPath>
+    <Reference Include="RazorEngine, Version=4.5.0-rc1, Culture=neutral, PublicKeyToken=9ee697374c7e744a, processorArchitecture=MSIL">
+      <HintPath>packages\RazorEngine.4.5.0-rc1\lib\net45\RazorEngine.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
