--- a/packages.config
+++ b/packages.config
@@ -2,6 +2,6 @@
 <packages>
   <package id="Extended.Wpf.Toolkit" version="2.2.1" targetFramework="net45" />
   <package id="Microsoft.AspNet.Razor" version="3.2.6" targetFramework="net45" />
-  <package id="RazorEngine" version="3.4.0" targetFramework="net45" />
+  <package id="RazorEngine" version="4.5.0-rc1" targetFramework="net45" />
   <package id="RtPsHost" version="1.0.4.4" targetFramework="net45" />
 </packages>
